  * Cleanup some old Conflicts/Replaces, thanks to Helge Kreutzmann.
  * Modify dselect to treat all unknown package as known and marked for purge.
    This is a temporary work-around so that dselect doesn't try to reinstall
    packages of priority > standard that were removed or not installed. Thanks
    to Robert Luderda for the patch. Closes: #559519, #556889

  [ Colin Watson ]
  * Modern tar files typically use NormalFile1 rather than NormalFile0 for
    file objects. A typo meant that the former never triggered rename
    deferral. Closes: #577756

  [ Guillem Jover ]
  * Report deferred trigger errors on status-fd. Closes: #574599
    Thanks to Michael Vogt <michael.vogt@ubuntu.com>.
  * When creating hard links to normal files on extraction use the .dpkg-new
    filename for source as the file is not yet in place due to the rename
    deferral. Thanks to Colin Watson for the initial patch.

  [ Updated dpkg translations ]
  * German (Sven Joachim).

  [ Updated dselect translations ]
  * German (Sven Joachim).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Raphaël Hertzog <hertzog@debian.org>  Sun, 28 Mar 2010 16:46:04 +0200

dpkg (1.15.6.1) experimental; urgency=low

  [ Guillem Jover ]
  * Fix two memory leaks introduced in 1.15.6.
  * Always use C99 variadic macros, as the build requires them anyway, we
    avoid exposing the configure variable HAVE_C99 on installed headers.
  * Use __attribute__ keyword depending on compiler support, we avoid
    exposing the configure variable HAVE_C_ATTRIBUTE on installed headers.
  * Do not allow a --retry schedule in start-stop-daemon where forever is
    the last item, as it needs something to repeat over. Closes: #570938
  * Show dselect dependency/conflicts resolution screen again, by switching
    the code to use STL's min() and max() instead of preprocessor macros, to