@@ -80,6 +80,7 @@ DPKG_BEGIN_DECLS
 
 #define MAINTSCRIPTPKGENVVAR "DPKG_MAINTSCRIPT_PACKAGE"
 #define MAINTSCRIPTARCHENVVAR "DPKG_MAINTSCRIPT_ARCH"
+#define MAINTSCRIPTNAMEENVVAR "DPKG_MAINTSCRIPT_NAME"
 #define MAINTSCRIPTDPKGENVVAR "DPKG_RUNNING_VERSION"
 
 #define SHELLENV            "SHELL"
