@@ -651,6 +651,10 @@ package name being handled.
 .B DPKG_MAINTSCRIPT_ARCH
 Defined by \fBdpkg\fP on the maintainer script environment to the
 architecture the package got built for.
+.TP
+.B DPKG_MAINTSCRIPT_NAME
+Defined by \fBdpkg\fP on the maintainer script environment to the
+name of the script running (preinst, postinst, prerm, postrm).
 .
 .SH EXAMPLES
 To list packages related to the editor \fBvi\fP(1):
