@@ -31,6 +31,9 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
     This is a temporary work-around so that dselect doesn't try to reinstall
     packages of priority > standard that were removed or not installed. Thanks
     to Robert Luderda for the patch. Closes: #559519, #556889
+  * dpkg now exports DPKG_MAINTSCRIPT_NAME to maintainer scripts with the
+    type of maintainer script currently running (preinst, postinst, prerm,
+    postrm). Closes: #546577
 
   [ Colin Watson ]
   * Modern tar files typically use NormalFile1 rather than NormalFile0 for
